# kopete-scripting

./: CMakeLists.txt  Messages.sh  Readme.txt  kopete_scripting.desktop  kopete_scripting_config.desktop  scripting.rc  scriptingchatui.rc  scriptinginterface.cpp  scriptinginterface.h  scriptinginterface_p.h  scriptingplugin.cpp  scriptingplugin.h  scriptingpreferences.cpp  scriptingpreferences.h  scriptingui.rc
scripts/: CMakeLists.txt  OrcaScreenReader.py  Testcase.js  Testcase.py
